# DerpsCubedAPIDockerLink

./: Dockerfile  LICENSE  README.md  auth.py  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.in  requirements.txt  routes.py  schemas.py
.github/workflows/: docker-release.yml
